fix grid align

--- a/styles.css
+++ b/styles.css
@@ -29,6 +29,7 @@ h1 {
     text-align: center;
     display: grid;
     place-items: center; 
+    width: 100%;
     height: 100vh;
 }
 
